test/depCond5.slq
def foo(x:ğ”¹,const cond:ğ”¹){
	y:=dup(x);
	z:=0;
	if cond{
		forget(y); /// error
		x:=H(x);
	}else{
		z=y;
	}
	return (x,z);
}
